// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceLockup renders with default props 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:last-child) {
  margin-bottom: 0.25rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.c6 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1;
}

.c5 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.5rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.7px;
  -moz-letter-spacing: -0.7px;
  -ms-letter-spacing: -0.7px;
  letter-spacing: -0.7px;
}

.c4 {
  line-height: 1.5;
}

.c4 medium {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c0 {
  text-align: left;
}

.c2 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:768px) {
  .c1 > *:not(:last-child) {
    margin-bottom: 0.25rem;
  }
}

@media (min-width:768px) {
  .c3 > *:not(:last-child) {
    margin-right: 0.25rem;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.8px;
    -moz-letter-spacing: -0.8px;
    -ms-letter-spacing: -0.8px;
    letter-spacing: -0.8px;
  }
}

<div
  class="c0 sc-bwzfXH c0 c1"
>
  <div
    class="c1"
  >
    <div
      class="c2 sc-htpNat c2 c3"
    >
      <div
        class="c3"
      >
        <span
          class="c4"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c5"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c6"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
</div>
`;

exports[`PriceLockup size prop is large renders 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c1 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c6 {
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
}

.c5 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 2.75rem;
  font-weight: 300;
}

.c4 {
  color: #2a2c2e;
  font-weight: 400;
  font-size: 1.75rem;
  line-height: 1.3;
  -webkit-letter-spacing: -1.6px;
  -moz-letter-spacing: -1.6px;
  -ms-letter-spacing: -1.6px;
  letter-spacing: -1.6px;
}

.c0 {
  text-align: left;
}

.c2 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:768px) {
  .c3 > *:not(:last-child) {
    margin-right: 0.5rem;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 4.5rem;
    -webkit-letter-spacing: 0.2px;
    -moz-letter-spacing: 0.2px;
    -ms-letter-spacing: 0.2px;
    letter-spacing: 0.2px;
  }
}

@media (min-width:768px) {
  .c4 {
    font-weight: 300;
    font-size: 2.75rem;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }
}

<div
  class="c0 sc-bwzfXH c0 c1"
>
  <div
    class="c1"
  >
    <span
      class="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__large___24W-w TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__largeFont___3k7bm TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
    >
      top text
    </span>
    <div
      class="c2 sc-htpNat c2 c3"
    >
      <div
        class="c3"
      >
        <span
          class="c4"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c5"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c6"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
</div>
`;

exports[`PriceLockup size prop is medium renders 1`] = `
.c9 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.25rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:last-child) {
  margin-bottom: 1rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c8 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c7 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.75rem;
  -webkit-letter-spacing: -1.6px;
  -moz-letter-spacing: -1.6px;
  -ms-letter-spacing: -1.6px;
  letter-spacing: -1.6px;
  font-weight: 400;
}

.c6 {
  word-wrap: break-word;
  font-size: 1.25rem;
  -webkit-letter-spacing: -1px;
  -moz-letter-spacing: -1px;
  -ms-letter-spacing: -1px;
  letter-spacing: -1px;
  line-height: 1.6;
}

.c0 {
  text-align: left;
}

.c3 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:768px) {
  .c2 > *:not(:last-child) {
    margin-bottom: 0.25rem;
  }
}

@media (min-width:768px) {
  .c5 > *:not(:last-child) {
    margin-right: 0.25rem;
  }
}

@media (min-width:768px) {
  .c1 > *:not(:last-child) {
    margin-bottom: 1rem;
  }
}

@media (min-width:768px) {
  .c4 > *:not(:last-child) {
    margin-right: 0.5rem;
  }
}

@media (min-width:768px) {
  .c7 {
    font-weight: 300;
    font-size: 2.75rem;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }
}

<div
  class="c0 sc-bwzfXH c0 c1"
>
  <div
    class="c2"
  >
    <span
      class="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__color___2CNH8"
    >
      top text
    </span>
    <div
      class="c3 sc-htpNat c3 c4"
    >
      <div
        class="c5"
      >
        <span
          class="c6"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c7"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c8"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
  <hr
    class="c9"
  />
  <span
    class="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__mediumFont___XMrRj TDS_Typography-modules__color___2CNH8"
  >
    bottom text
  </span>
</div>
`;

exports[`PriceLockup size prop is small renders 1`] = `
.c8 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 > *:not(:last-child) {
  margin-bottom: 0.25rem;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 > *:not(:last-child) {
  margin-right: 0.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c7 {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1;
}

.c6 {
  word-wrap: break-word;
  padding: 0;
  margin: 0;
  line-height: 1;
  font-size: 1.5rem;
  font-weight: 400;
  -webkit-letter-spacing: -0.7px;
  -moz-letter-spacing: -0.7px;
  -ms-letter-spacing: -0.7px;
  letter-spacing: -0.7px;
}

.c5 {
  line-height: 1.5;
}

.c5 medium {
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
}

.c0 {
  text-align: left;
}

.c3 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

@media (min-width:768px) {
  .c2 > *:not(:last-child) {
    margin-bottom: 0.25rem;
  }
}

@media (min-width:768px) {
  .c4 > *:not(:last-child) {
    margin-right: 0.25rem;
  }
}

@media (min-width:768px) {
  .c1 > *:not(:last-child) {
    margin-bottom: 0.5rem;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 1.75rem;
    -webkit-letter-spacing: -0.8px;
    -moz-letter-spacing: -0.8px;
    -ms-letter-spacing: -0.8px;
    letter-spacing: -0.8px;
  }
}

<div
  class="c0 sc-bwzfXH c0 c1"
>
  <div
    class="c2"
  >
    <span
      class="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__color___2CNH8"
    >
      top text
    </span>
    <div
      class="c3 sc-htpNat c3 c4"
    >
      <div
        class="c4"
      >
        <span
          class="c5"
          data-testid="dollarSign"
        >
          $
        </span>
        <span
          class="c6"
          data-testid="priceValue"
        >
          25
        </span>
      </div>
      <span
        class="c7"
        data-testid="rateText"
      >
        /month
      </span>
    </div>
  </div>
  <hr
    class="c8"
  />
  <span
    class="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__color___2CNH8"
  >
    bottom text
  </span>
</div>
`;
